gitops/manifests/web-node/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-web-node
  labels:
    tenant: web-node
