gitops/manifests/web-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-node
  namespace: app-web-node
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: mini-paas
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  ingressClassName: alb
  rules:
    - host: web.mini-paas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-node
                port:
                  name: http
